--- a/index.html
+++ b/index.html
@@ -6,27 +6,54 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
 </head>
 <body>
-
-  “ I’ve been interested in coding for a while but never taken the jump, until now. 
-  I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
-  excited about the future. ”
-
-  Tanya Sinclair
-  UX Engineer
-
-  “ If you want to lay the best foundation possible I’d recommend taking this course. 
+<main>
+  <!-- slider 1 -->
+  <div class="slider">
+    <figure class="info-container">
+      <blockquote>
+        “ I’ve been interested in coding for a while but never taken the jump, until now. 
+        I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
+        excited about the future. ”
+      </blockquote>
+      <figcaption>
+        <div class="name">Tanya Sinclair</div>
+        <div class="rol">UX Engineer</div>
+      </figcaption>  
+    </figure>
+    <div class="hero">
+      <img src="./images/image-tanya.jpg" alt="tanya">
+      <button><img src="./images/icon-prev.svg" alt="prev"><img src="./images/icon-next.svg" alt="next"></button>
+    </div>
+  </div>
+  
+     <!-- fin de slider 1 -->
+     <!-- slider 2 -->
+  <!-- <div class="slider">
+    <figure class="info-container">
+      <blockquote>
+        “ If you want to lay the best foundation possible I’d recommend taking this course. 
   The depth the instructors go into is incredible. I now feel so confident about 
   starting up as a professional developer. ”
-
-  John Tarkpor
-  Junior Front-end Developer
-  
-  <div class="attribution">
+      </blockquote>
+      <figcaption>
+        <div class="name">John Tarkpor</div>
+        <div class="rol">Junior Front-end Developer</div>
+      </figcaption>  
+    </figure>
+    <div class="hero">
+      <img src="./images/image-john.jpg" alt="john">
+      <button><img src="./images/icon-prev.svg" alt="prev"><img src="./images/icon-next.svg" alt="next"></button>
+    </div>
+  </div> -->
+  <img class="curve-bg" src="./images/pattern-curve.svg" alt="curve">
+</main>
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
