--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </figcaption>  
     </figure>
     <div class="hero">
-      <img src="./images/image-tanya.jpg" alt="tanya">
+      <img class="user-img" src="./images/image-tanya.jpg" alt="tanya">
       <button><img src="./images/icon-prev.svg" alt="prev"><img src="./images/icon-next.svg" alt="next"></button>
     </div>
   </div>
