--- a/index.html
+++ b/index.html
@@ -1,70 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="responsive.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
-  <title>Coding Bootcamp Testimonials Slider</title>
-</head>
-<body>
-<main>
-  <div class="slider">
-<!-- slider 1 -->
-<div class="slide active">
-  <figure class="info-container">
-    <blockquote>
-      “ I’ve been interested in coding for a while but never taken the jump, until now. 
-      I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
-      excited about the future. ”
-    </blockquote>
-    <figcaption>
-      <div class="name">Tanya Sinclair</div>
-      <div class="rol">UX Engineer</div>
-    </figcaption>  
-  </figure>
-  <div class="hero">
-    <img class="user-img" src="./images/image-tanya.jpg" alt="tanya">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Coding Bootcamp Testimonials Slider</title>
+  </head>
+  <body>
+    <main>
+      <div class="slider">
+        <!-- slider 1 -->
+        <div class="slide active">
+          <figure class="info-container">
+            <blockquote>
+              “ I’ve been interested in coding for a while but never taken the
+              jump, until now. I couldn’t recommend this course enough. I’m now
+              in the job of my dreams and so excited about the future. ”
+            </blockquote>
+            <figcaption>
+              <div class="name">Tanya Sinclair</div>
+              <div class="rol">UX Engineer</div>
+            </figcaption>
+          </figure>
+          <div class="hero">
+            <img class="user-img" src="./images/image-tanya.jpg" alt="tanya" />
+          </div>
+        </div>
+        <!-- fin de slider 1 -->
+        <!-- slider 2 -->
+        <div class="slide">
+          <figure class="info-container">
+            <blockquote>
+              “ If you want to lay the best foundation possible I’d recommend
+              taking this course. The depth the instructors go into is
+              incredible. I now feel so confident about starting up as a
+              professional developer. ”
+            </blockquote>
+            <figcaption>
+              <div class="name">John Tarkpor</div>
+              <div class="rol">Junior Front-end Developer</div>
+            </figcaption>
+          </figure>
+          <div class="hero">
+            <img class="user-img" src="./images/image-john.jpg" alt="john" />
+          </div>
+        </div>
+      </div>
+      <div class="controls">
+        <div class="prev">
+          <img src="./images/icon-prev.svg" alt="prev" />
+        </div>
+        <div class="next">
+          <img src="./images/icon-next.svg" alt="next" />
+        </div>
+      </div>
+      <img class="curve-bg" src="./images/pattern-curve.svg" alt="curve" />
+    </main>
     
-  </div>
-</div>
-   <!-- fin de slider 1 -->
-   <!-- slider 2 -->
-<div class="slide">
-  <figure class="info-container">
-      <blockquote>
-        “ If you want to lay the best foundation possible I’d recommend taking this course. 
-        The depth the instructors go into is incredible. I now feel so confident about 
-        starting up as a professional developer. ”
-      </blockquote>
-      <figcaption>
-        <div class="name">John Tarkpor</div>
-        <div class="rol">Junior Front-end Developer</div>
-      </figcaption>  
-  </figure>
-  <div class="hero">
-      <img class="user-img" src="./images/image-john.jpg" alt="john">
-  </div>
-</div>
-  </div>
-  <div class="controls">
-    <div class="prev">
-      <img src="./images/icon-prev.svg" alt="prev">
-    </div>
-    <div class="next">
-      <img src="./images/icon-next.svg" alt="next">
-    </div>
-  </div>
-  <img class="curve-bg" src="./images/pattern-curve.svg" alt="curve">
-</main>
-  <!-- <div class="attribution">
+    <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
- 
-  <script src="main.js"></script>
-</body>
+
+    <script src="main.js"></script>
+  </body>
 </html>
